package com.directi.training.isp.exercise_refactored;

public interface ILockable {
    void lock();
    void unlock();
}