package com.directi.training.isp.exercise_refactored;

public interface IOpenable {
    void open();
    void close();
}