package com.directi.training.isp.exercise_refactored;

public interface IProximityCallback {
    void proximityCallback();
}