package com.directi.training.isp.exercise_refactored;

public interface ITimedCallback {
    void timeOutCallback();
}